--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <div class="home-info padd-15">
                             <h3 class="hello">Hello, my name is <span class="name">Luanna Espinola</span></h3>
                             <h3 class="my-profession">I'm a <span class="typing"> </span></h3>
-                            <p>Im' an inspiring web developer looking for my first opportunity to engage in a professional carrer!</p>
+                            <p>I'm an inspiring web developer looking for my first opportunity to engage in a professional carrer!</p>
                             <a href="https://drive.google.com/drive/folders/1f9Hkx4SFXPhqAM1U1Xf1HvgBsHQT00vp?usp=sharing" target="_blank" class="btn">Download CV</a>
                         </div>
                         <div class="home-img padd-15">
