--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <a href="https://luannaespinola.github.io/AnnaBella/index.html" target="_blank"><img src="img/AnnaBella.png" alt="MyProjectAnnaBella"></a>
+                                    <a href="https://luannaespinola.github.io/TecBlog/" target="_blank"><img src="img/TecBlog.png" alt="MyProjectTecBlog"></a>
                                 </div>
                             </div>
                         </div>
