--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Personal Portfolio</title>
 
     <!--Css-->
+    
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/skin/color1.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
@@ -107,7 +108,7 @@
                                             <p>Birthday : <span>06 oct 1997</span></p>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <p>Age : <span>24</span></p>
+                                            <p>Age : <span>25</span></p>
                                         </div>
                                         <div class="info-item padd-15">
                                             <p>Linkedin : <span>https://www.linkedin.com/in/luanna-espinola-a87ab7178/</span></p>
@@ -417,13 +418,13 @@
                         </div>
                         <!--Projects Item End-->
                         <!--Projects Item Start-->
-                        <div class="portfolio-item padd-15">
+                        <!--<div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <a href="https://luannaespinola.github.io/TecBlog/" target="_blank"><img src="img/TecBlog.png" alt="MyProjectTecBlog"></a>
+                                    <a href="#" target="_blank"><img src="#" alt="ComingSoon"></a>
                                 </div>
                             </div>
-                        </div>
+                        </div>-->
                         <!--Projects Item End-->
                         <!--Projects Item Start-->
                         <div class="portfolio-item padd-15">
